<resources>
    <string name="app_name" translatable="false">BrewFilter</string>
    <string name="make_coffee">Brew Coffee with Hario V60</string>
    <string name="more_information">More Information</string>
    <string name="how_much_coffee_do_i_need">How much coffee do I need?</string>
    <string name="how_much_water_do_i_need">How much water do I need?</string>
    <string name="textview">Choose the first option if you want to brew a specific volume of coffee and need to know how much coffee you need. Choose the second option if you know how much coffee you have and want to know how much water you should use./>
</string>
    <string name="info">Choose the first option if you want to brew a specific volume of coffee and need to know how much coffee you need. Choose the second option if you know how much coffee you have and want to know how much water you should use.</string>
    <string name="how_much_water_do_you_want_to_use_in_ml">How much water do you want to use (in ml)?</string>
    <string name="water_in_ml">water (in ml)</string>
    <string name="choose_the_intensity_of_the_coffee">Choose the intensity of the coffee:</string>
    <string name="mild">Mild</string>
    <string name="standard">Standard</string>
    <string name="strong">Strong</string>
    <string name="your_result_will_show_here">Your result will show here</string>
    <string name="how_much_coffee_do_you_want_to_use_in_g">How much coffee do you want to use (in g)?</string>
    <string name="coffee_in_g">coffee (in g)</string>
    <string name="missing_value">Please enter the amount above.</string>
</resources>
